experimental/pulp-rs/tests/snapshots/snapshot_test__config_list_empty.snap
---
source: tests/snapshot_test.rs
expression: v
---
{
  "config_path": "<CONFIG_PATH>",
  "entries": [
    {
      "key": "pr.workflow",
      "value": "shipyard",
      "default": true
    },
    {
      "key": "update.mode",
      "value": "prompt",
      "default": true
    },
    {
      "key": "update.check_interval_hours",
      "value": "24",
      "default": true
    },
    {
      "key": "update.channel",
      "value": "stable",
      "default": true
    },
    {
      "key": "update.bump_projects",
      "value": "prompt",
      "default": true
    },
    {
      "key": "import_design.default_mode",
      "value": "live",
      "default": true
    },
    {
      "key": "import_design.default_emit",
      "value": "js",
      "default": true
    },
    {
      "key": "import_design.browser",
      "value": "auto",
      "default": true
    },
    {
      "key": "claude.send_user_file",
      "value": "on",
      "default": true
    }
  ]
}
