experimental/pulp-rs/tests/snapshots/snapshot_test__config_list_populated.snap
---
source: tests/snapshot_test.rs
expression: v
---
{
  "config_path": "<CONFIG_PATH>",
  "entries": [
    {
      "key": "pr.workflow",
      "value": "github",
      "default": false
    },
    {
      "key": "update.mode",
      "value": "auto",
      "default": false
    },
    {
      "key": "update.check_interval_hours",
      "value": "48",
      "default": false
    },
    {
      "key": "update.channel",
      "value": "beta",
      "default": false
    },
    {
      "key": "update.bump_projects",
      "value": "off",
      "default": false
    },
    {
      "key": "import_design.default_mode",
      "value": "baked",
      "default": false
    },
    {
      "key": "import_design.default_emit",
      "value": "cpp",
      "default": false
    },
    {
      "key": "import_design.browser",
      "value": "auto",
      "default": true
    },
    {
      "key": "claude.send_user_file",
      "value": "off",
      "default": false
    }
  ]
}
