experimental/pulp-rs/tests/snapshots/snapshot_test__projects_list_multiple_with_stale.snap
---
source: tests/snapshot_test.rs
expression: v
---
{
  "registry": "<REGISTRY>",
  "projects": [
    {
      "path": "/tmp/pulp-rs-fixture/active-plugin",
      "name": "active-plugin",
      "registered_at": "2026-04-23T10:00:00Z",
      "missing_on_disk": false
    },
    {
      "path": "/nonexistent/stale-project-a",
      "name": "StaleA",
      "registered_at": "2026-04-01T00:00:00Z",
      "missing_on_disk": true
    },
    {
      "path": "/nonexistent/stale-project-b",
      "name": "StaleB",
      "registered_at": "2026-04-02T00:00:00Z",
      "missing_on_disk": true
    },
    {
      "path": "/tmp/pulp-rs-fixture/also-active",
      "name": "also-active",
      "registered_at": "2026-04-22T00:00:00Z",
      "missing_on_disk": false
    }
  ]
}
