experimental/pulp-rs/tests/snapshots/snapshot_test__upgrade_check_disabled.snap
---
source: tests/snapshot_test.rs
expression: v
---
{
  "installed": "0.37.0",
  "latest": "",
  "is_newer": false,
  "release_notes_url": "",
  "source": "disabled"
}
